@@ -1,8 +1,9 @@
 win32-loader (0.6.11) UNRELEASED; urgency=low
 
   * Remove kludge for etch support.
+  * Merge all plugin code into a single DLL.
 
- -- Robert Millan <rmh@aybabtu.com>  Sun, 15 Feb 2009 14:54:07 +0100
+ -- Robert Millan <rmh@aybabtu.com>  Sun, 15 Mar 2009 12:48:54 +0100
 
 win32-loader (0.6.10) unstable; urgency=low
 
